[REFACTOR] replace Collectors.toList() with Stream.toList() in SessionService